--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,10 +1,10 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/mvc_hibernate?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/mvc_hibernate?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 db.username=admin
 db.password=admin
 
 # Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
 
